feat: add persistent dynamic tool registry core

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ MCP_TRANSPORT=stdio
 MCP_HOST=127.0.0.1
 MCP_PORT=8788
 MCP_PATH=/mcp
+
+# Dynamic tools registry
+MCP_DYNAMIC_STORE=.dynamic-mcp/tools.json
+MCP_DYNAMIC_MAX_TOOLS=256
+# MCP_ADMIN_TOKEN=change-me
