feat: run dynamic tools in isolated docker sandbox

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,13 @@ MCP_PATH=/mcp
 MCP_DYNAMIC_STORE=.dynamic-mcp/tools.json
 MCP_DYNAMIC_MAX_TOOLS=256
 # MCP_ADMIN_TOKEN=change-me
+
+# Sandbox execution policy
+MCP_SANDBOX_DOCKER_BIN=docker
+MCP_SANDBOX_MEMORY_LIMIT=512m
+MCP_SANDBOX_CPU_LIMIT=1
+MCP_SANDBOX_MAX_DEPENDENCIES=32
+MCP_SANDBOX_MAX_OUTPUT_BYTES=200000
+MCP_SANDBOX_MAX_TIMEOUT_MS=120000
+MCP_SANDBOX_ALLOWED_IMAGES=node:lts-slim
+MCP_SANDBOX_BLOCKED_PACKAGES=child_process,node-pty,npm,pm2
