feat: add reusable sandbox session tools with cleanup

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ MCP_SANDBOX_MAX_OUTPUT_BYTES=200000
 MCP_SANDBOX_MAX_TIMEOUT_MS=120000
 MCP_SANDBOX_ALLOWED_IMAGES=node:lts-slim
 MCP_SANDBOX_BLOCKED_PACKAGES=child_process,node-pty,npm,pm2
+MCP_SANDBOX_SESSION_TIMEOUT_SECONDS=1800
+MCP_SANDBOX_MAX_SESSIONS=20
