feat: enforce admin auth and global tool execution guard

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ MCP_SANDBOX_ALLOWED_IMAGES=node:lts-slim
 MCP_SANDBOX_BLOCKED_PACKAGES=child_process,node-pty,npm,pm2
 MCP_SANDBOX_SESSION_TIMEOUT_SECONDS=1800
 MCP_SANDBOX_MAX_SESSIONS=20
+
+# Global tool guard
+MCP_TOOL_MAX_CONCURRENCY=8
+MCP_TOOL_MAX_CALLS_PER_WINDOW=300
+MCP_TOOL_RATE_WINDOW_MS=60000
