--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,10 @@ MCP_SANDBOX_MAX_SESSIONS=20
 MCP_TOOL_MAX_CONCURRENCY=8
 MCP_TOOL_MAX_CALLS_PER_WINDOW=300
 MCP_TOOL_RATE_WINDOW_MS=60000
+
+# HTTP auth mode: none | jwt
+MCP_AUTH_MODE=none
+# MCP_AUTH_JWKS_URL=https://issuer.example.com/.well-known/jwks.json
+# MCP_AUTH_ISSUER=https://issuer.example.com/
+# MCP_AUTH_AUDIENCE=dynamic-mcp
+# MCP_AUTH_REQUIRED_SCOPES=mcp:tools
