feat: add postgres-backed dynamic tool registry backend

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,13 @@ MCP_PORT=8788
 MCP_PATH=/mcp
 
 # Dynamic tools registry
+# file | postgres
+MCP_DYNAMIC_BACKEND=file
 MCP_DYNAMIC_STORE=.dynamic-mcp/tools.json
 MCP_DYNAMIC_MAX_TOOLS=256
 # MCP_ADMIN_TOKEN=change-me
+# MCP_DYNAMIC_PG_URL=postgres://postgres:postgres@127.0.0.1:5432/dynamic_mcp
+MCP_DYNAMIC_PG_SCHEMA=dynamic_mcp
 
 # Sandbox execution policy
 MCP_SANDBOX_DOCKER_BIN=docker
@@ -34,3 +38,8 @@ MCP_AUTH_MODE=none
 # MCP_AUTH_ISSUER=https://issuer.example.com/
 # MCP_AUTH_AUDIENCE=dynamic-mcp
 # MCP_AUTH_REQUIRED_SCOPES=mcp:tools
+
+# Audit logging
+MCP_AUDIT_ENABLED=true
+MCP_AUDIT_FILE=.dynamic-mcp/audit.log
+MCP_AUDIT_MAX_EVENT_BYTES=20000
