--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "dotenv": "^17.2.4",
     "jose": "^6.1.3",
+    "pg": "^8.18.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
+    "@types/pg": "^8.16.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.3.0",
