feat: add rotating audit log files with retention controls

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,5 @@ MCP_AUTH_MODE=none
 MCP_AUDIT_ENABLED=true
 MCP_AUDIT_FILE=.dynamic-mcp/audit.log
 MCP_AUDIT_MAX_EVENT_BYTES=20000
+MCP_AUDIT_MAX_FILE_BYTES=10000000
+MCP_AUDIT_MAX_FILES=5
