feat: add retry policy for postgres registry initialization

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ MCP_DYNAMIC_MAX_TOOLS=256
 # MCP_ADMIN_TOKEN=change-me
 # MCP_DYNAMIC_PG_URL=postgres://postgres:postgres@127.0.0.1:5432/dynamic_mcp
 MCP_DYNAMIC_PG_SCHEMA=dynamic_mcp
+MCP_DYNAMIC_PG_INIT_MAX_ATTEMPTS=10
+MCP_DYNAMIC_PG_INIT_BACKOFF_MS=1000
 
 # Sandbox execution policy
 MCP_SANDBOX_DOCKER_BIN=docker
