ci: add docker and compose deployment smoke checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,80 @@ jobs:
 
       - name: Build
         run: npm run build
+
+  docker-http-smoke:
+    runs-on: ubuntu-latest
+    needs: verify
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: docker build -t dynamic-mcp:test .
+
+      - name: Run HTTP container
+        run: |
+          docker run -d --name dynamic-mcp-http \
+            -p 8788:8788 \
+            -e MCP_TRANSPORT=http \
+            -e MCP_HOST=0.0.0.0 \
+            -e MCP_PORT=8788 \
+            dynamic-mcp:test
+
+      - name: Wait for readiness
+        run: |
+          for i in $(seq 1 30); do
+            if curl -fsS http://127.0.0.1:8788/readyz >/dev/null; then
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Container did not become ready in time."
+          docker logs dynamic-mcp-http
+          exit 1
+
+      - name: Probe liveness and readiness
+        run: |
+          curl -fsS http://127.0.0.1:8788/livez
+          curl -fsS http://127.0.0.1:8788/readyz
+
+      - name: Cleanup
+        if: always()
+        run: docker rm -f dynamic-mcp-http || true
+
+  compose-postgres-smoke:
+    runs-on: ubuntu-latest
+    needs: verify
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Start compose stack
+        run: docker compose -f deploy/docker-compose.postgres.yml up -d --build
+
+      - name: Wait for stack readiness
+        run: |
+          for i in $(seq 1 40); do
+            if curl -fsS http://127.0.0.1:8788/readyz >/dev/null; then
+              exit 0
+            fi
+            sleep 3
+          done
+          echo "Compose stack did not become ready in time."
+          docker compose -f deploy/docker-compose.postgres.yml logs
+          exit 1
+
+      - name: Probe liveness and readiness
+        run: |
+          curl -fsS http://127.0.0.1:8788/livez
+          curl -fsS http://127.0.0.1:8788/readyz
+
+      - name: Show compose logs on failure
+        if: failure()
+        run: docker compose -f deploy/docker-compose.postgres.yml logs
+
+      - name: Teardown
+        if: always()
+        run: docker compose -f deploy/docker-compose.postgres.yml down -v --remove-orphans
