--- a/deploy/k8s/dynamic-mcp-postgres.yaml
+++ b/deploy/k8s/dynamic-mcp-postgres.yaml
@@ -102,6 +102,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dynamic-mcp
+  annotations:
+    prometheus.io/scrape: 'true'
+    prometheus.io/path: '/metrics'
+    prometheus.io/port: '8788'
 spec:
   selector:
     app: dynamic-mcp
