feat: add dynamic registry read-only freeze mode

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ MCP_PATH=/mcp
 MCP_DYNAMIC_BACKEND=file
 MCP_DYNAMIC_STORE=.dynamic-mcp/tools.json
 MCP_DYNAMIC_MAX_TOOLS=256
+MCP_DYNAMIC_READ_ONLY=false
 # MCP_ADMIN_TOKEN=change-me
 # MCP_DYNAMIC_PG_URL=postgres://postgres:postgres@127.0.0.1:5432/dynamic_mcp
 MCP_DYNAMIC_PG_SCHEMA=dynamic_mcp
