feat: add HTTP session TTL expiry and stale-session metrics

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ MCP_TRANSPORT=stdio
 MCP_HOST=127.0.0.1
 MCP_PORT=8788
 MCP_PATH=/mcp
+MCP_HTTP_SESSION_TTL_SECONDS=1800
 
 # Dynamic tools registry
 # file | postgres
