feat: enforce HTTP request body size limits

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ MCP_HOST=127.0.0.1
 MCP_PORT=8788
 MCP_PATH=/mcp
 MCP_HTTP_SESSION_TTL_SECONDS=1800
+MCP_HTTP_MAX_REQUEST_BYTES=1000000
 
 # Dynamic tools registry
 # file | postgres
