--- a/deploy/k8s/dynamic-mcp-postgres.yaml
+++ b/deploy/k8s/dynamic-mcp-postgres.yaml
@@ -7,6 +7,7 @@ data:
   MCP_HOST: '0.0.0.0'
   MCP_PORT: '8788'
   MCP_PATH: '/mcp'
+  MCP_HTTP_MAX_REQUEST_BYTES: '1000000'
 
   MCP_DYNAMIC_BACKEND: 'postgres'
   MCP_DYNAMIC_PG_SCHEMA: 'dynamic_mcp'
