feat: add mvp profile and gate enterprise-only features

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # stdio | http
 MCP_TRANSPORT=stdio
+# mvp | enterprise
+MCP_PROFILE=mvp
 
 # HTTP options (used when MCP_TRANSPORT=http)
 MCP_HOST=127.0.0.1
