--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Production-grade MCP server template with stdio and Streamable HTTP transports.",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.29.3",
   "engines": {
     "node": ">=20"
   },
@@ -25,17 +26,17 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "jose": "^6.1.3",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^10.0.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.3.0",
     "prettier": "^3.8.1",
