ci: disable kubectl schema validation in client dry-run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,6 +134,6 @@ jobs:
 
       - name: Validate k8s manifests (client dry-run)
         run: |
-          kubectl apply --dry-run=client -f deploy/k8s/dynamic-mcp-postgres.yaml
-          kubectl apply --dry-run=client -f deploy/k8s/dynamic-mcp-scalability.yaml
-          kubectl apply --dry-run=client -f deploy/k8s/dynamic-mcp-networkpolicy.yaml
+          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-postgres.yaml
+          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-scalability.yaml
+          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-networkpolicy.yaml
