--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,11 +129,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v4
-
-      - name: Validate k8s manifests (client dry-run)
+      - name: Validate k8s manifests (kubeconform)
         run: |
-          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-postgres.yaml
-          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-scalability.yaml
-          kubectl apply --dry-run=client --validate=false -f deploy/k8s/dynamic-mcp-networkpolicy.yaml
+          docker run --rm -v "$PWD":/work -w /work ghcr.io/yannh/kubeconform:latest \
+            -strict \
+            -summary \
+            deploy/k8s/dynamic-mcp-postgres.yaml \
+            deploy/k8s/dynamic-mcp-scalability.yaml \
+            deploy/k8s/dynamic-mcp-networkpolicy.yaml
