--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,9 +21,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
-      - name: pnpm install, build, and test
+      - name: pnpm install, typecheck, lint, build, and test
         run: |
           pnpm install --frozen-lockfile
+          pnpm typecheck
+          pnpm lint
           pnpm build
           pnpm test
         env:
