feat: add auto execution engine with docker-node fallback

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ MCP_DYNAMIC_PG_INIT_MAX_ATTEMPTS=10
 MCP_DYNAMIC_PG_INIT_BACKOFF_MS=1000
 
 # Sandbox execution policy
+MCP_EXECUTION_ENGINE=auto
 MCP_SANDBOX_DOCKER_BIN=docker
 MCP_SANDBOX_MEMORY_LIMIT=512m
 MCP_SANDBOX_CPU_LIMIT=1
