--- a/.env.prod.example
+++ b/.env.prod.example
@@ -24,6 +24,7 @@ MCP_REQUIRE_ADMIN_TOKEN=true
 MCP_ADMIN_TOKEN=change-me
 
 # Sandbox execution policy
+MCP_EXECUTION_ENGINE=auto
 MCP_SANDBOX_DOCKER_BIN=docker
 MCP_SANDBOX_MEMORY_LIMIT=512m
 MCP_SANDBOX_CPU_LIMIT=1
