--- a/deploy/docker-compose.postgres.yml
+++ b/deploy/docker-compose.postgres.yml
@@ -30,6 +30,7 @@ services:
       MCP_PORT: 8788
       MCP_PATH: /mcp
       MCP_HTTP_MAX_REQUEST_BYTES: 102400
+      MCP_EXECUTION_ENGINE: auto
 
       MCP_DYNAMIC_BACKEND: postgres
       MCP_DYNAMIC_PG_URL: postgres://dynamic_mcp:change-me@postgres:5432/dynamic_mcp
